--- a/main.html
+++ b/main.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>To-Do List App</title>
 </head>
 <body>
-    
+    <input type="text" id="taskInput" placeholder="Enter a new task">
+    <button id="addTaskButton">Add Task</button>
+    <ul id="taskList"></ul>
+    <script src="script.js"></script>
 </body>
 </html>
