Placed getElementById method

--- a/main.html
+++ b/main.html
@@ -7,9 +7,13 @@
     <title>To-Do List App</title>
 </head>
 <body>
+    <div class="inputButtonContainer">
     <input type="text" id="taskInput" placeholder="Enter a new task">
     <button id="addTaskButton">Add Task</button>
-    <ul id="taskList"></ul>
+    </div>
+    <ul id="taskList">Tasks:
+        <li></li>
+    </ul>
     <script src="script.js"></script>
 </body>
 </html>
